2004-07-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Improved exception handling ;
	- Fixed the Amazon provider to perform another lookup using the
	  next locale when the previous one gives no results.

2004-07-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb:

	Fixed the providers calling mechanism (if a provider raises an
	exception we call the next one if any, otherwise we pass the exception
	to the main app). 

2004-07-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Fixed a bug when trying to sort icons by rating when books didn't
	  have rating yet ;
	- Fixed a bug in the sorting method (edition and publisher was
	  inversed).

2004-07-04  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Removed the first label ;
	- The dialog is now resizable on search purposes.

	* lib/alexandria/library.rb:

	Fixed a bug when removing a book that doesn't have any cover image.

=== Alexandria 0.3.0 ===

2004-07-03  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Updated for 0.3.0.

	* RELEASE_CHECKLIST:

	Added the README step.

2004-06-30  Laurent Sansonetti  <lrz@gnome.org>
	
	* NEWS:

	Updated for 0.3.0. 

2004-06-27  Laurent Sansonetti  <lrz@gnome.org>

	* RELEASE_CHECKLIST,
	  make_release.sh:

	Added.

	* lib/alexandria.rb:

	Includes version.rb (automatically generated).

	* lib/alexandria/.cvsignore:

	Ignores version.rb.

	* lib/alexandria/pre-setup.rb:

	Generates version.rb.

2004-06-25  Laurent Sansonetti  <lrz@gnome.org>
	
	* README:

	Incremented Ruby/Amazon's version (0.8.2 -> 0.8.3).

	* lib/alexandria/preferences.rb:

	Added code to retrieve GNOME HTTP proxy configuration.

	* lib/alexandria/book_providers/amazon.rb,