@@ -1,3 +1,11 @@
+2004-07-10  Dafydd Harries  <daf@muse.19inch.net>
+
+	* lib/alexandria/library.rb,
+	  lib/alexandria/ui/new_book_dialog.rb:
+
+	- Proper support for EAN numbers. Also, ISBN numbers are tidied more
+	  consistently.
+
 2004-07-09  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/book_providers.rb,
